@@ -7,6 +7,7 @@ import (
 	"github.com/slok/goresilience"
 	"github.com/slok/goresilience/errors"
 	runnerutils "github.com/slok/goresilience/internal/util/runner"
+	"github.com/slok/goresilience/metrics"
 )
 
 const (
@@ -15,6 +16,7 @@ const (
 
 // StaticConfig is the configuration of the Static timeout.
 type StaticConfig struct {
+	// Timeout is the duration that will be waited before giving as a timeouted execution.
 	Timeout time.Duration
 }
 
@@ -40,6 +42,8 @@ func NewStatic(cfg StaticConfig, r goresilience.Runner) goresilience.Runner {
 	r = runnerutils.Sanitize(r)
 
 	return goresilience.RunnerFunc(func(ctx context.Context, f goresilience.Func) error {
+		metricsRecorder, _ := metrics.RecorderFromContext(ctx)
+
 		// Set a timeout to the command using the context.
 		// Should we cancel the context if finished...? I guess not, it could continue
 		// the middleware chain.
@@ -51,13 +55,14 @@ func NewStatic(cfg StaticConfig, r goresilience.Runner) goresilience.Runner {
 			errc <- r.Run(ctx, f)
 		}()
 
-		// Wait until the deadline has been reached or w have a result.
+		// Wait until the deadline has been reached or we have a result.
 		select {
-		// Circuit finished correctly.
+		// Finished correctly.
 		case err := <-errc:
 			return err
-		// Circuit timeout.
+		// Timeout.
 		case <-ctx.Done():
+			metricsRecorder.IncTimeout()
 			return errors.ErrTimeout
 		}
 	})
