@@ -1,5 +1,7 @@
 ## 0.x.x / xxxx-xx-xx
 
+* Measure retry, bulkhead, timeout, failure injector, circuit breaker and command exection.
+* Add metrics recorder through the execution context.
 * Add failure injector.
 * Add circuit breaker.
 * Add bulkhead.
